gitops-patterns/pattern-2-git-generator/tenant-examples/team-alpha-services/services/frontend/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: ghcr.io/csz-ghorg/frontend:latest
        ports:
        - containerPort: 3000
